# IgKnite

./: .dockerignore  .env.sample  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  guicer.py  hop.yml  main.py  pre-commit-config.yaml  pyproject.toml  reboot.py  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.fleet/: run.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature_request.yml  other.yml
.github/workflows/: build-image.yml  codesee-arch-diagram.yml  deploy.yml  docker-image.yml  fly-deploy.yml  formatting.yml  linting.yml  stylecheck.yml
cogs/: __init__.py  admin.py  cogs.json  customization.py  exceptionhandler.json  exceptionhandler.py  general.py  inspection.py  moderation.py  music.py
core/: AntiSpam_Bot.py  __init__.py  bot.py  chain.py  dataclasses.py  datacls.py  decor.py  embeds.py  global_.py  guicer.py  igknite_ascii.txt  keychain.py  ui.py
docs/: README.md
