[project]
name = "igknite"
version = "2025.1.31"
description = "A unified, Swiss-grade bot, designed for providing fine moderation & music on Discord"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "HitBlast", email = "hitblastlive@gmail.com" }]
dependencies = [
    "async-timeout>=5.0.1",
    "disnake[voice]>=2.10.1",
    "python-decouple>=3.8",
    "spotipy>=2.25.0",
    "yt-dlp>=2025.1.26",
]

 [tool.ruff]
 target-version = "py313"
 line-length = 80
 exclude = [".venv"]

[tool.ruff.lint.per-file-ignores]
"core/__init__.py" = ["F401", "F403"]
"core/global_.py" = ["F841"]
"cogs/customization.py" = ["E203"]

[tool.ruff.format]
quote-style = "single"

